# CMCEvolver

./: .gitignore  CMakeLists.txt  README.md  mesh_op.cpp
cmc_surface/: CMakeLists.txt
cmc_surface/HLBFGS/: CMakeLists.txt
parallel/: CMakeLists.txt
src/: AFP_shapes.cpp  AFP_shapes.h  CMakeLists.txt  CurvatureEvolution.h  InterfacialFE_minimization.cpp  InterfacialFE_minimization.h  Mesh.cpp  Mesh.h  MeshActions.cpp  MeshActions.h  MeshCurvatureflow.cpp  MeshCurvatureflow.h  UmbrellaSmoothing.cpp
tools/: CMakeLists.txt  CommonTypes.h
